fix: z-index pack

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,3 @@
-#main-banner {
-  z-index: 399;
-}
-
 .mode-wrapper {
  display: flex;
  flex-direction: column;
